# SOS_bench

./: .gitattributes  CMakeLists.txt  Dockerfile  README.md
data/: README.md  batch_jitter_to_bin.py  data_generator.py  generate_ts.py  generate_ts_new.py  hardness_translation.py
data/demo_config/: dis_events.json  events.json  mixture.json  num_axis.json  tau_second.json
hardness_metric/: README.md  main.py
hardness_metric/src/: plotting.py  utils.py  worker.py
hardness_metric/src/algorithms/: mse.py  pgm.py  sc.py  sd.py
src/: README.md  tscns.h
src/benchmark/: benchmark_streaming.h  concurrent_evaluation.h  flags.h  microbench.cpp  utils.h
src/competitor/: competitor.h  indexInterface.h
src/competitor/artsync/: artolc.h  artrowex.h  artunsync.h
src/competitor/artsync/src/ART/: N16.cpp  N4.cpp
src/competitor/artsync/src/OptimisticLockCoupling/: N.cpp  N.h  N16.cpp  N256.cpp  N4.cpp  N48.cpp  Tree.cpp  Tree.h
src/competitor/btree/: btree.h
src/competitor/btree/src/include/stx/: btree.h
src/competitor/btreeolc/: btreeolc.h
src/competitor/btreeolc/src/: index.h
src/competitor/btreeolc/src/BTreeOLC/: BTreeOLC_child_layout.h
src/competitor/btreeolc/src/btree-rtm/: btree.c  btree.h
src/competitor/btreeolc/src/pcm/WinMSRDriver/Win7/: MSR.inf
src/competitor/carmi/: carmi.h
src/competitor/carmi/src/: .gitignore  README.md
src/competitor/carmi/src/src/: CMakeLists.txt
src/competitor/carmi/src/src/experiment/dataset/: lognormal_distribution.h  longitudes.h  uniform_distribution.h
src/competitor/carmi/src/src/include/: params.h
src/competitor/carmi/src/src/include/nodes/rootNode/trainModel/: linear_regression.h
src/competitor/dili/: CMakeLists.txt  dili.h
src/competitor/dili/src/src/butree/: interval_utils.cpp  linearRegressor.cpp  linearRegressor.h
src/competitor/dili/src/src/dili/: DILI.cpp  DILI.h  diliNode.h
src/competitor/dili/src/src/utils/: linux_sys_utils.cpp  linux_sys_utils.h
src/competitor/dytis/: dytis.h
src/competitor/finedex/: finedex.h
src/competitor/finedex/src/include/: util.h
src/competitor/finedex/src/osm/include/: fine_model.h  finedex.h  level_bin.h  logging.hh  masstree.h  masstree_impl.h  util.h
src/competitor/imtree/: imtree.h
src/competitor/lipp/src/src/core/: lipp.h
src/competitor/lippol/src/src/core/: lipp.h
src/competitor/loft/: loft.h
src/competitor/loft/src/: CMakeLists.txt  LOFT.h  LOFT_impl.h  README.md  data_node.h  data_node_impl.h  helper.h  model.h  model_impl.h  piecewise_linear_model.hpp  root.h  root_impl.h  util.h  work_stealing.h  zipf.h
src/competitor/loft/src/bench/: microbench.cpp
src/competitor/masstree/: CMakeLists.txt
src/competitor/sali/: sali.h
src/competitor/sali/src/src/core/: sali.h
src/competitor/swix/: pswix.h  swix.h
src/competitor/swix/src/: main.cpp  parameters.hpp  parameters_p.hpp
src/competitor/swix/src/benchmark/: run_finedex.cpp
src/competitor/swix/src/lib/carmi/: params.h
src/competitor/swix/src/lib/carmi/construct/: construction.h
src/competitor/swix/src/lib/finedex/: util.h
src/competitor/swix/src/src/: PSwix_v2.hpp
src/competitor/swix/src/timer/: timer.h
src/competitor/swix/src/utils/: output_files.hpp  print_debug_util.hpp  print_util.hpp
src/competitor/xindex/: xindex.h
src/competitor/xindex/src/: helper.h  microbench.cpp  xindex.h  xindex_buffer.h  xindex_buffer_impl.h  xindex_group.h  xindex_group_impl.h  xindex_impl.h  xindex_model.h  xindex_model_impl.h  xindex_root.h  xindex_root_impl.h
